--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -1,17 +1,18 @@
-name: tests
+name: tests-auth
 
 on: [pull_request]
 
 jobs:
   build:
-  
     runs-on: ubuntu-latest
-    
+    defaults:
+      run:
+        working-directory: ./auth
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: "20.x"
       - run: npm ci
-      - run: npm test
+      - run: npm test:ci
