--- a/infra/k8s-prod/ingress-service.yaml
+++ b/infra/k8s-prod/ingress-service.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-    - host: ticketing.dev
+    - host: shienlee73.app
       http:
         paths:
           - path: /api/users/?(.*)
