--- a/infra/k8s-prod/ingress-service.yaml
+++ b/infra/k8s-prod/ingress-service.yaml
@@ -4,7 +4,12 @@ metadata:
   name: ingress-service
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+    cert-manager.io/issuer: "letsencrypt-prod"
 spec:
+  tls:
+    - hosts:
+        - shienlee73.app
+      secretName: tls-secret
   rules:
     - host: shienlee73.app
       http:
